--- a/SupportPackage_OV2/SupportPackage_OV2.csproj
+++ b/SupportPackage_OV2/SupportPackage_OV2.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7E811E5A-68E2-4280-9E85-DFE5296D40C3}</ProjectGuid>
+    <ProjectGuid>{6A3A4210-3E10-484C-9C55-4868EACEEA16}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EcoFriendlyToliet</RootNamespace>
-    <AssemblyName>EcoFriendlyToliet_OV2</AssemblyName>
+    <RootNamespace>SupportPackage</RootNamespace>
+    <AssemblyName>SupportPackage_OV2</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
@@ -64,17 +66,33 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Buildings\AutoPurifyWashsinkConfig.cs" />
-    <Compile Include="Buildings\EcoFriendlyToiletConfig.cs" />
+    <Compile Include="Buildings\CO2DecomposerEZConfig.cs" />
+    <Compile Include="Buildings\EasyElectrolyzerConfig.cs" />
+    <Compile Include="Buildings\H2OSynthesizerConfig.cs" />
+    <Compile Include="Buildings\MagicTileConfig.cs" />
+    <Compile Include="Buildings\OrganicDeoxidizerConfig.cs" />
+    <Compile Include="Buildings\TwoInOneGrillConfig.cs" />
+    <Compile Include="Buildings\WastewaterSterilizerConfig.cs" />
+    <Compile Include="Extension\StringExtension.cs" />
+    <Compile Include="Extension\StringsKeyListExtension.cs" />
     <Compile Include="GlobalConsts.cs" />
-    <Compile Include="GlobalVars.cs" />
     <Compile Include="LocalStrings\KoreanDef.cs" />
     <Compile Include="LocalStrings\ModStringsKey.cs" />
-    <Compile Include="Patchs.cs" />
+    <Compile Include="__PATCHS__\Db_Initialize_Patch_OV2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scripts\AutoPurify.cs" />
-    <Compile Include="Scripts\FerzToilet.cs" />
+    <Compile Include="Scripts\InOneCockingStationEX.cs" />
+    <Compile Include="Scripts\InOneRefrigerator.cs" />
+    <Compile Include="Scripts\PublicZoneTile.cs" />
+    <Compile Include="__MERGE__\SUPER_SUIT\CONTINUE_PATCH.cs" />
+    <Compile Include="__MERGE__\SUPER_SUIT\Equipments\AdvanceSuperSuitConfig.cs" />
+    <Compile Include="__MERGE__\SUPER_SUIT\Equipments\BasicSuperSuitConfig.cs" />
+    <Compile Include="__MERGE__\SUPER_SUIT\Equipments\LargeBackpackConfig.cs" />
+    <Compile Include="__MERGE__\SUPER_SUIT\Equipments\MediumBackpackConfig.cs" />
+    <Compile Include="__MERGE__\SUPER_SUIT\Equipments\SmallBackpackConfig.cs" />
+    <Compile Include="__MERGE__\SUPER_SUIT\P2_GlobalConsts.cs" />
+    <Compile Include="__MERGE__\SUPER_SUIT\SUPER_SUIT_COMMON_METHODS.cs" />
+    <Compile Include="__PATCHS__\SUPERSUIT_PATCH_01_V1.cs" />
+    <Compile Include="__PATCHS__\SUPERSUIT_PATCH_02A_V1.cs" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
